Improving comment, adding more tests.